[package]
name = "oort-vm"
description = "The Oort Virtual Machine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
documentation = "https://docs.rs/oort-vm"
readme = "README.md"
repository = "https://github.com/Solarcode-org/OortVM"
keywords = ["compiler", "ir"]
categories = ["compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
logos = "0.14.0"
tempfile = "3.10.1"
