[package]
name = "oort-vm"
description = "The Oort Virtual Machine"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/oort-vm"
readme = "README.md"
repository = "https://github.com/Solarcode-org/OortVM"
keywords = ["compiler", "ir"]
categories = ["compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c-emit = "0.1.2"
logos = "0.14.0"
tempfile = "3.10.1"
